<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/aboutHeader"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context="com.haarishaq.view.AboutActivity">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutParagraph"
            android:textAlignment="center" />

        <Button
            android:id="@+id/officialGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_the_official_game" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutCopy"
        app:layout_constraintBottom_toTopOf="@+id/aboutFoot"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"/>

    <LinearLayout
        android:id="@+id/aboutFoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/contactUsButton"
            style="?android:buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/contactButton" />

        <Button
            android:id="@+id/backButton"
            style="?android:buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/backButton" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>

